# ChordPro2HTML

./: LICENSE.md  README.md  version.h
.kdev/: CMakeLists.txt
default_out/: Nel blu dipinto di blu (Domenico Modugno).html
doc/: ChordPro 5 directives.xlsx
doc/expected output example/: Nel blu dipinto di blu - Canta la gioia.htm  Nel blu dipinto di blu - Real Book.htm  cantalagioia.css  realbook.css
doc/www.chordpro.net/: extract.htm
doc/www.chordpro.net/Content/: Site.css
inc/: chordpro_data.h  chordpro_parser.h  console_utf8.h  file_system.h  html_writer.h
projects/KDevelop/: CMakeLists.txt  ChordPro2HTML.kdev4
projects/KDevelop/.kdev4/: ChordPro2HTML.kdev4
projects/Visual Studio/: ChordPro2HTML.sln
projects/Visual Studio/ChordPro2HTML/: ChordPro2HTML.rc  ChordPro2HTML.vcxproj  ChordPro2HTML.vcxproj.filters
src/: chordpro_data.cpp  chordpro_parser.cpp  console_utf8.cpp  file_system.cpp  html_writer.cpp  main.cpp
